--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ h1 {
 h2 {
     font-size: 36px;
     line-height: 43px;
+    text-align: center;
 }
 
 h3 {
@@ -76,6 +77,7 @@ h3 {
     h2 {
         font-size: 48px;
         line-height: 58px;
+        text-align: left;
     }
 }
 
@@ -97,6 +99,12 @@ h3 {
 }
 
 /* Style for Navbar */
+@media  only screen and (max-width: 575px) {
+    nav {
+        margin-bottom: 3rem;
+    }
+}
+
 .navbar-nav .nav-item .nav-link {
     font-weight: var(--fw-medium);
     line-height: 24px;
@@ -121,4 +129,20 @@ h3 {
     }
 }
 
+/*=======================
+ Style For Main Section
+=========================*/
 
+/* Card */
+.card {
+    box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.05);
+    border-radius: 20px;
+}
+.card-img-top {
+    background-color: #F1F1F1;
+    border-radius: 20px;
+    width: 334px;
+    height: 327px;
+    padding: 22px;
+    margin: 18px;
+}
